--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "cypress": "^9.6.0",
     "firebase": "^9.8.1",
+    "hamburger-react": "^2.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-input-mask": "^2.0.4",
